fix(dropdown-v2): correct helper text on dark mode

--- a/tegel/src/components/dropdown-v2/dropdown-v2-theme-vars.scss
+++ b/tegel/src/components/dropdown-v2/dropdown-v2-theme-vars.scss
@@ -22,7 +22,7 @@
   --sdds-dropdown-border-bottom-open: var(--sdds-blue-400);
   --sdds-dropdown-value-color: var(--sdds-white);
   --sdds-dropdown-label-color: var(--sdds-grey-400);
-  --sdds-dropdown-helper-color: var(--sdds-grey-700);
+  --sdds-dropdown-helper-color: var(--sdds-grey-500);
   --sdds-dropdown-placeholder-color: var(--sdds-grey-400);
 
   .sdds-mode-variant-primary {
